--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -107,7 +107,7 @@ In the time since then, all published RFCs have followed the general plan from {
 At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII ({{RFC20}}) plain text and moving to a definitive version that includes all the information required for rendering a document into a wide variety of publication versions.
 The RPC became responsible for more than just the plain-text file and the PDF-from-text format created at time of publication; the RPC now creates several different formats in order to meet the diverse requirements of the community.
 
-The final XML file produced by the RPC is the definitive version for RFCs; it is the lowest common denominator that holds all the information intended for an RFC.
+The final XML file produced by the RPC is the definitive version for RFCs; it holds all the information intended for an RFC.
 Additonal file formats (HTML, PDF, and plain text) are also published by the RPC.
 The file formats are described in {{pub-versions}} and fully specified in other RFCs.
 
@@ -116,7 +116,7 @@ The file formats are described in {{pub-versions}} and fully specified in other 
 
 The definitive version produced by the RPC is the version that holds all the information intended for an RFC.
 The RPC may change the definitive version of an RFC over time, as described in {{updating}}.
-See {{RFC7991}} for the complete description of the XMLRFC syntax and semantics.
+See {{RFC7991}} for the complete description of the RFCXMLsyntax and semantics.
 
 The XML may contain SVG line art, as described in {{RFC7996}}.
 That SVG will also appear in the HTML and PDF publication versions.
@@ -124,9 +124,9 @@ That SVG will also appear in the HTML and PDF publication versions.
 The XML may contain non-ASCII characters, as described in {{RFC7997}}.
 These characters will appear in all the publication versions.
 
-The XML file will not contain any XMLRFC vocabulary elements or attributes that have been marked deprecated.
+The XML file will not contain any RFCXMLvocabulary elements or attributes that have been marked deprecated.
 
-Authors may submit documents using the xml2rfc v2 vocabulary, but the final publication will be converted to use the XMLRFC vocabulary.
+Authors may submit documents using the RFCXML v2 vocabulary, but the final publication will be converted to use the RFCXMLvocabulary.
 
 The published XML file must contain all information necessary to render a variety of formats; any question about what was intended in the publication will be answered from this file.
 It is self-contained with all the information known at publication time.
@@ -167,7 +167,7 @@ This policy explicitly updates the stability policy from {{RFC9280}} for publica
 
 ## HTML
 
-{{RFC7992}} describes the semantic HTML produced by the RPC from the XMLRFC files.
+{{RFC7992}} describes the semantic HTML produced by the RPC from the XMLfiles.
 The HTML file is rendered from the XML file; it is not derived from the plain-text publication version.
 The body of the document uses a subset of HTML.
 
@@ -196,15 +196,8 @@ The PDF includes a rich set of tags and metadata within the document.
 
 ## Plain Text
 
-{{RFC7994}} describes the details of the plain-text format; in particular, it focuses on what changed from the earlier plain-text format for publishing RFCs.
-
-The plain-text format is UTF-8 encoded, and non-ASCII characters are allowed.
-A Byte Order Mark (BOM) is added at the start of each plain-text file.
-
-The plain-text file is unpaginated.
-Running headers and footers are not be used in the plain-text file.
-
-Authors may choose to have pointers to line art in other publication versions in place of ASCII art in the plain-text file.
+{{RFC7994}} describes the details of the plain-text format.
+In particular, it focuses on what changed from the earlier plain-text format for publishing RFCs.
 
 
 # Archived Documents
