--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -105,10 +105,10 @@ The first RFC to be published using the group of RFCs described in {{RFC7990}} w
 In the time since then, all published RFCs have followed the general plan from {{RFC7990}}.
 
 At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII ({{RFC20}}) plain text and moving to a definitive version that includes all the information required for rendering a document into a wide variety of publication versions.
-The RPC became responsible for more than just the plain-text file and the PDF-from-text format created at time of publication; the RPC now creates several different formats in order to meet the diverse requirements of the community.
+The RPC became responsible for more than just the plain-text file and a PDF rendering that was created from the plain-text at the time of publication; the RPC now creates several different formats in order to meet the diverse requirements of the community.
 
 The final XML file produced by the RPC is the definitive version for RFCs; it holds all the information intended for an RFC.
-Additonal file formats (HTML, PDF, and plain text) are also published by the RPC.
+Additional file formats (HTML, PDF, and plain text) are also published by the RPC.
 The file formats are described in {{pub-versions}} and fully specified in other RFCs.
 
 
