--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -70,7 +70,8 @@ This document is concerned with the production of RFCs, focusing on the publishe
 It does not address any changes to the processes each stream uses to develop and review their submissions (specifically, how Internet-Drafts will be developed).
 While I-Ds have a similar set of issues and concerns, directly addressing those issues for I-Ds will be discussed within each document stream.
 
-The details described in this document are expected to continue to change over time as further experience with the components of the framework is gained.
+The details described in this document are expected to continue to change over time as the community and the RPC gains further experience with the components of the framework.
+
 Implementors of those components are advised to avoid assuming that all such changes will be backwards-compatible.
 
 ## Changes to RFC 7990 and RFC 9280
