--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -147,11 +147,10 @@ It  does not contain comments or processing instructions.
 
 ## Updating the Definitive Version of an RFC {#updating}
 
-Historically, the published version of an RFC has been immutable.
-This document defines a new policy that the RPC is permitted to re-issue an RFC for changes that preserve to the greatest extent possible the semantics expressed in the original RFC.
-Reasons for such a change include updates to the RFCXML schema, errors discovered in the XML, and changes to the tooling used to generate the publication versions of the definitive XML version of the RFC.
+RFCs may be re-issued, as described in {{changes-to-9280}}.
+Such changes will seek to preserve the semantics expressed in the original RFC while maintaining consistency across the series.
+Reasons for such changes include updates to the RFCXML schema, errors discovered in the XML, and changes to the tooling used to generate the publication versions of the definitive XML version of the RFC.
 The RPC will keep a public record of when it re-issues any RFC, and give a short description of its reasoning for each change.
-This policy explicitly updates the stability policy from {{RFC9280}} for the definitive version, as specfied in {{changes-to-9280}}.
 
 ## Expected Updates to XMLRFC
 
@@ -165,16 +164,12 @@ Instead, it only requires that such updates consider the potential for semantic 
 
 # Publication Versions {#pub-versions}
 
-Publication version files may be republished as needed.
+The RPC is permitted but not required to re-issue publication versions of an RFC, as described in {{changes-to-9280}}.
+In deciding whether to update the publication versions of an RFC, the RPC will take into account both the risk of semantic changes and consistency of the series.
+
 XML format errors and better design choices have been discovered by the community since the first RFCs were published using the RFCXML format.
-When the XML in a definitive version changes, publication versions can change, even if this might not result in observable differences.
-Similarly, as production tools change, publication versions can be regenerated to ensure a consistent presentation across the series.
-
-Publication versions and the contexts in which they are displayed can optionally provide additional details of the specific RFCXML version that they were generated from, or provide a means to discover alternative renderings.
-
-This document defines a new policy that the RPC is permitted but not required to re-issue publication versions of an RFC.
-This can happen if the definitive version is updated, but can also happen due to other changes, such as updates to the RPC's tooling. 
-This policy explicitly updates the stability policy from {{RFC9280}} for publication versions, as specfied in {{changes-to-9280}}.
+When the XML in a definitive version changes, the publication versions may change, even if this might not result in observable differences.
+Similarly, as production tools change, publication versions may be regenerated to ensure a consistent presentation across the series.
 
 ## HTML
 
