--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -66,7 +66,7 @@ Issues can be raised there, but probably should be on the mailing list instead.
 Based on the discussions with communities of interest, such as the IETF, the RFC Series Editor decided to explore a change to the format of the Series.
 This document serves as the framework that describes the problems that were solved and summarizes the documents created to date that capture the specific requirements for each aspect of the change in format.
 
-This document is concerned with the production of RFCs, focusing on the published formats.
+This document is concerned with the production of RFCs, focusing on the published documents.
 It does not address any changes to the processes each stream uses to develop and review their submissions (specifically, how Internet-Drafts will be developed).
 While I-Ds have a similar set of issues and concerns, directly addressing those issues for I-Ds will be discussed within each document stream.
 
@@ -118,7 +118,7 @@ The first RFC to be published using the group of RFCs described in {{RFC7990}} w
 In the time since then, all published RFCs have followed the general plan from {{RFC7990}}.
 
 At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII ({{RFC20}}) plain text and moving to a definitive version that includes all the information required for rendering a document into a wide variety of publication versions.
-The RPC became responsible for more than just the plain-text file and a PDF rendering that was created from the plain-text at the time of publication; the RPC now creates several different formats in order to meet the diverse requirements of the community.
+The RPC became responsible for more than just the plain-text file and a PDF rendering that was created from the plain-text at the time of publication; the definitive version and three publication versions of the RFC in order to meet the diverse requirements of the community.
 
 The final XML file produced by the RPC is the definitive version for RFCs; it holds all the information intended for an RFC.
 Additional file formats (HTML, PDF, and plain text) are also published by the RPC.
@@ -136,7 +136,7 @@ That SVG will also appear in the HTML and PDF publication versions.
 The XML may contain non-ASCII characters, as originally described in {{RFC7997}}.
 These characters will appear in all the publication versions.
 
-The published XML file must contain all information necessary to render a variety of formats; any question about what was intended in the publication will be answered from this file.
+The published XML file must contain all information necessary to render the specified publication versions; any question about what was intended in the publication will be answered from this file.
 It is self-contained with all the information known at publication time.
 For instance, all features that reference externally defined input are expanded.
 It does not contain src attributes for &lt;artwork> or &lt;sourcecode> elements.
@@ -247,6 +247,7 @@ Alexis Rossi,
 Brian Carpenter,
 Eliot Lear,
 Jay Daley,
+Jean Mahoney,
 John Levine,
 and Pete Resnick,
 gave significant input on the early drafts of this document.
