--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -47,7 +47,7 @@ informative:
 In order to improve the readability of RFCs while supporting their archivability, the definitive version of the RFC Series transitioned from plain-text ASCII to XML using the RFCXML vocabulary; different publication versions are rendered from that base document.
 This document is the framework that provides the problem statement, lays out a road map of the documents that capture the specific requirements, and describes how RFCs are published.
 
-This document obsoletes RFC 7990 and makes many significant changes to that document.
+This document obsoletes RFC 7990 and makes many significant changes to that document. This document updates RFCs 7995 and 8153 by changing the requirement from using the PDF/A-3 standard to using the PDF/A standard and by dropping the requirement that the XML be embedded in the PDF publication version.
 It also updates the stability policy in RFC 9280.
 
 This draft is part of the RFC Series Working Group (RSWG); see <https://datatracker.ietf.org/edwg/rswg/documents/>.
